# Appledore

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
docs/: GraphMatrix.md  GraphMatrix.md.save  MixedGraph.md  index.html  script.js  style.css
docs/lib-structure/: GraphMatrix.md
examples/: CMakeLists.txt  a.out  addEdgeExample.cpp  addVertex.cpp  allPaths.cpp  bfsExample  bfsExample.cpp  connectedGraph.cpp  degreeCal.cpp  directedGraph.cpp  edgeRetrieval.cpp  flightRoutes.cpp  isolatedVertices.cpp  primitiveGraph.cpp  removeVertexgiventestcase.cpp  socialNetwork.cpp  undirectedGraph.cpp  updateEdge.cpp  updateEdgeExample.cpp  vertexRemoval.cpp  vertexRemoval2.cpp  vertexRemoveUpdated.cpp
examples/GraphMatrix/: CMakeLists.txt  allPaths.cpp  connectedGraph.cpp  directedGraph.cpp  edgeRetrieval.cpp  isolatedVertices.cpp  socialNetwork.cpp  undirectedGraph.cpp  updateEdge.cpp  vertexRemoval2.cpp
examples/MixedGraphMatrix/: CMakeLists.txt  addEdgeExample.cpp  addVertex.cpp  degreeCal.cpp  flightRoutes.cpp  primitiveGraph.cpp  vertexRemoval.cpp  vertexRemoveUpdated.cpp
include/: GraphExceptions.h  GraphExceptions.hpp  GraphMatrix.h  GraphMatrix.hpp  MatrixRep.h  MatrixRep.hpp  MixedGraph.h  MixedGraph.hpp  graphExceptions.h
test_suite/: GraphMatrixTest.cpp  graph_types.hpp  test_suite  test_suite.cpp  tests_GraphMatrix.hpp
tests/: a.out  graph_types.hpp  test_suite  test_suite.cpp  tests_GraphMatrix.hpp
